# SpaceVoxelGame

./: CMakeLists.txt
resources/: fragment.frag  raymarching.frag  raymarching.vert  vertex.vert
resources/Textures/: AsteroidOne.aseprite  AsteroidOneSpecular.aseprite
resources/shaders/: Sun.frag  Sun.vert
src/: Logging.h  main.cpp
src/Application/: Application.cpp  Application.h  Window.cpp  Window.h
src/Data/: BlockData.h
src/Data/Registries/: BlockRegistry.cpp  BlockRegistry.h
src/ECS/: Block.cpp  Block.h  Body.cpp  Body.h  BodyComponent.h  Camera.h  Chunk.cpp  Chunk.h  ChunkComponent.h  Component.h  Entity.cpp  Entity.h  Renderer.h  Sun.h  Transform.h
src/Universe/: Universe.cpp  Universe.h
src/Universe/Systems/: RenderSystem.cpp  RenderSystem.h  SunSystem.cpp  SunSystem.h  System.h
src/graphics/: ElementBufferObject.cpp  ElementBufferObject.h  Face.h  Model.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  Vertex.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h
